# semi-automatic-drone-control

./: README.md  conversion.py  drone_launch.txt  findInter.py  intersection.py  numpytest.py  testER.py  testIR.py  testLSD3.py  videoCapture.py  vpInER.py
img_drone/: readme
vanishing/: CMakeLists.txt  package.xml
vanishing/launch/: vpdetection.launch  vpdetectiondrone.launch
vanishing/scripts/: droneCtrl.py  findInter.py  imgVis.py  intersection.py  testvp.py  vanishing_points.py
vanishing_final/: CMakeLists.txt  readme
vanishing_final/script/: conversion.py  findInter.py  intersection.py  vanishing_points.py
vp_detection/: conversion.py  ervp.py  findInter.py  imgVis.py  irvp.py  readme  testvp.py
vp_detection_rapide/: ervp.py  irvp.py  readme
